# MadVoro

./: .gitignore  AUTHORS  CITATION.md  LICENSE  Makefile.am  Makefile.in  README.md  bootstrap.sh  configure  configure.ac  configure~
config/: check_boost.m4  check_cpp.m4  check_hdf5.m4  check_mpi.m4  check_vcl.m4  check_vtk.m4  clean_ifdef.m4
examples/faces_information/: README.md  build.sh  main.cpp
examples/fox/: README.md  main.cpp  mpi_utils.hpp
examples/fox/input/: points_inside_fox  points_outside_fox
examples/frustum_faces/: frustum_helpers.hpp  main.cpp
examples/parallel_multiple_builds/: README.md  main.cpp
examples/parallel_output_vtk/: README.md  build.sh  main.cpp  read_points.hpp
examples/pentagon/: README.md  build.sh  main.cpp  pentagon_helpers.hpp
examples/pyramid/: README.md  main.cpp  pyramid_helpers.hpp
examples/uniform_points/: README.md  build.sh  parallel.cpp  serial.cpp
src/: Makefile.am  Makefile.in
src/delaunay/: Delaunay3D.cpp  Delaunay3D.hpp
src/ds/: BinaryTree.hpp
src/ds/DistributedOctTree/: DistributedOctTree.hpp  RankedValue.hpp
src/ds/GroupRangeTree/: GroupRangeTree.hpp
src/ds/GroupTree/: GroupTree.hpp
src/ds/KDTree/: KDTree.hpp
src/ds/OctTree/: OctTree.hpp
src/ds/RangeTree/: RangeTree.hpp
src/ds/utils/: BoundingBox.hpp  Sphere.hpp  geometry.hpp  raw_type.h
src/elementary/: Face.cpp  Face.hpp  Face3D.cpp  Face3D.hpp  Mat33.hpp  Point3D.cpp  Point3D.hpp  Tetrahedron.cpp  Tetrahedron.hpp  Vector3D.cpp  Vector3D.hpp
src/environment/: CurveEnvAgent.hpp  EnvironmentAgent.h
src/environment/hilbert/: DistributedOctEnvAgent.hpp  HilbertCurveEnvAgent.hpp  HilbertEnvAgent.hpp  HilbertTreeEnvAgent.hpp
src/exception/: InvalidArgumentException.cpp  InvalidArgumentException.hpp  MadVoroException.cpp  MadVoroException.hpp  SizeException.cpp  SizeException.hpp
src/geometry/: Intersections.cpp  Intersections.hpp
src/hilbert/: HilbertConvertor3D.hpp  HilbertOrder3D.cpp  HilbertOrder3D.hpp  HilbertOrder3D_Utils.cpp  HilbertOrder3D_Utils.hpp  hilbertTypes.h
src/hilbert/ordinary/: HilbertOrdinaryConvertor3D.hpp
src/hilbert/rectangular/: HilbertRectangularConvertor3D.cpp  HilbertRectangularConvertor3D.hpp  HilbertRectangularTree3D.hpp
src/include/: Makefile.am  Makefile.in
src/io/: io3D.cpp  io3D.hpp  simple_io.cpp  simple_io.hpp
src/io/hdf5/: WritePointsHDF5.cpp  WritePointsHDF5.hpp  WriteVoronoiHDF5.cpp  WriteVoronoiHDF5.hpp  hdf5_utils.cpp  hdf5_utils.hpp
src/io/vtk/: WriteVoronoiVTK.cpp  WriteVoronoiVTK.hpp  write_vtu_3d.cpp  write_vtu_3d.hpp
src/loadBalancing/: CurveLoadBalancer.cpp  CurveLoadBalancer.hpp  HilbertLoadBalancer.cpp  HilbertLoadBalancer.hpp  LoadBalancer.cpp  LoadBalancer.hpp
src/mpi/balance/: balance.hpp  weightedBalance2.hpp
src/mpi/exchange/: exchange.hpp
src/mpi/serialize/: Serializable.hpp  Serializer.hpp  mpi_commands.hpp
src/queryAgent/: AnswerAgent.hpp  BusyWaitQueryAgent.hpp  QueryAgent.hpp  QueryData.hpp  TalkAgent.hpp  WaitUntilAnsweredQueryAgent.hpp
src/range/: BigRangeAgent.hpp  RangeQueryData.h  SentPointsContainer.hpp  SmallRangeAgent.hpp
src/range/finders/: BruteForce.hpp  GroupRangeTree.hpp  KDTree.hpp  OctTree.hpp  RangeFinder.hpp  RangeTree.hpp
src/range/finders/utils/: IndexedVector.hpp
src/utils/: Predicates3D.cpp  Predicates3D.hpp  compiler.h  utils.cpp  utils.hpp
src/utils/point/: 3DPoint.hpp
src/utils/print/: all.hpp  printTuples.hpp  printVectors.hpp
src/voronoi/: Voronoi3D.cpp  Voronoi3D.hpp  Voronoi3D.lo
src/voronoi/pointsManager/: HilbertPointsManager.cpp  HilbertPointsManager.hpp  PointsManager.cpp  PointsManager.hpp
